更新货运单功能

--- a/src/main/resources/templates/CargoBillPage/form.html
+++ b/src/main/resources/templates/CargoBillPage/form.html
@@ -716,11 +716,11 @@
         <script src="/yiyuan/static/assets/js/app.min.js"></script>
 
         <!--VUE JS-->
-        <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+        <script src="/yiyuan/static/assets/js/vue.js"></script>
         <!--Axios-->
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="/yiyuan/static/assets/js/axios.min.js"></script>
         <!--QS-->
-        <script src="https://cdn.bootcss.com/qs/6.7.0/qs.min.js"></script>
+        <!--<script src="https://cdn.bootcss.com/qs/6.7.0/qs.min.js"></script>-->
 
 
         <script>
