更新货运单功能

--- a/src/main/resources/templates/CargoBillPage/form.html
+++ b/src/main/resources/templates/CargoBillPage/form.html
@@ -244,7 +244,7 @@
 
                 <ul class="list-unstyled menu-left mb-0">
                     <li class="float-left">
-                        <a href="index.html" class="logo">
+                        <a href="list.html" class="logo">
                             <span class="logo-lg">
                                 <img src="/yiyuan/static/assets/images/logo.png" alt="" height="25">
                             </span>
