更新货运单功能

--- a/src/main/resources/templates/CargoBillPage/form.html
+++ b/src/main/resources/templates/CargoBillPage/form.html
@@ -726,7 +726,7 @@
         <script>
 
             //QS数据处理配置
-            var qs = Qs;
+            //var qs = Qs;
 
             //初始化VUE实例
             const app = new Vue({
