--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -720,6 +720,9 @@
                             app.cargobillList = response.data.data;
                             console.log("++++++++++++++++++++++++++++++");
                             console.log( app.cargobillList);
+
+                            $(document).ready(function(){$("#datatable").DataTable({keys:!0});var t=$("#datatable-buttons").DataTable({lengthChange:!1,buttons:["copy","print"]});$("#selection-datatable").DataTable({select:{style:"multi"}}),t.buttons().container().appendTo("#datatable-buttons_wrapper .col-md-6:eq(0)")});
+
                         }).catch(function (error) {
                             //请求异常响应结果
                             console.log(error);
@@ -814,7 +817,7 @@
         <script src="/yiyuan/static/assets/libs/datatables/dataTables.select.min.js"></script>
 
         <!-- Datatables init -->
-        <script src="/yiyuan/static/assets/js/pages/datatables.init.js"></script>
+        <!--<script src="/yiyuan/static/assets/js/pages/datatables.init.js"></script>-->
 
         <!-- App js -->
         <script src="/yiyuan/static/assets/js/app.min.js"></script>
