更新日志功能；更新页面

--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -90,37 +90,6 @@
                                     <p class="notify-details">Sandra Smith<small class="text-muted">Hey ! I'm working on your project</small></p>
                                 </a>
 
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon"><img src="/yiyuan/static/assets/images/users/avatar-2.jpg" class="img-fluid rounded-circle" alt="" /></div>
-                                    <p class="notify-details">Amily Lee<small class="text-muted">Hi, How are you? What about our next meeting?</small></p>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon">
-                                        <img src="/yiyuan/static/assets/images/users/avatar-3.jpg" class="img-fluid rounded-circle" alt="" /> </div>
-                                    <p class="notify-details">David Boos</p>
-                                    <p class="text-muted mb-0 user-msg">
-                                        <small>What about our next meeting</small>
-                                    </p>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon"><img src="/yiyuan/static/assets/images/users/avatar-4.jpg" class="img-fluid rounded-circle" alt="" /> </div>
-                                    <p class="notify-details">Christopher Palmer<small class="text-muted">Waiting for your Response...</small></p>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon">
-                                        <img src="/yiyuan/static/assets/images/users/avatar-5.jpg" class="img-fluid rounded-circle" alt="" /> </div>
-                                    <p class="notify-details">Malika Roy</p>
-                                    <p class="text-muted mb-0 user-msg">
-                                        <small>Wow that's great</small>
-                                    </p>
-                                </a>
                             </div>
 
                             <!-- All-->
@@ -158,43 +127,6 @@
                                     <p class="notify-details">Your upload has been approved<small class="text-muted">5 hours ago</small></p>
                                 </a>
 
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item active">
-                                    <div class="notify-icon bg-success"><i class="mdi mdi-map-marker-check"></i> </div>
-                                    <p class="notify-details">You added your Location<small class="text-muted">Just Now</small></p>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon bg-primary"><i class="mdi mdi-layers-remove"></i></div>
-                                    <p class="notify-details">Your item is shipped<small class="text-muted">It is a long established fact that a reader will</small></p>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon bg-purple"><i class="mdi mdi-check-bold"></i></div>
-                                    <p class="notify-details">Your order is placed<small class="text-muted">Dummy text of the printing and typesetting industry.</small></p>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon bg-warning">
-                                        <i class="mdi mdi-alert-outline"></i>
-                                    </div>
-                                    <p class="notify-details">Your Subscription Expired
-                                        <small class="text-muted">1 days ago</small>
-                                    </p>
-                                </a>
-
-                                <!-- item-->
-                                <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                    <div class="notify-icon bg-danger">
-                                        <i class="mdi mdi-settings"></i>
-                                    </div>
-                                    <p class="notify-details"><b>Devid</b>, You changed your Settings
-                                        <small class="text-muted">5 days ago</small>
-                                    </p>
-                                </a>
                             </div>
 
                             <!-- All-->
@@ -665,7 +597,7 @@
                     <div class="container-fluid">
                         <div class="row">
                             <div class="col-md-12 text-center">
-                                2019 © Dashboard Theme By <a href="#">Dashoon</a>
+                                2020 © Dashboard Theme By <a href="#">YiYuan</a>
                             </div>
                         </div>
                     </div>
