优化程序代码

--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -554,7 +554,7 @@
                             <!--====================条件搜索 end==========================-->
 
                             <!--====================layui 数据表格 start====================-->
-                            <!--lay 数据表格-->
+                            <!--lay 数据表格1-->
                             <table id="demo" lay-filter="test"></table>
                             <!--表格的工具栏-->
                             <script type="text/html" id="toolbarDemo">
