--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -713,6 +713,16 @@
                     break;
             };
         });//表格工具栏监听事件 -->结尾
+        table.on('tool(test)', function(obj){ //注：tool 是工具条事件名，test 是 table 原始容器的属性 lay-filter="对应的值"
+            var data = obj.data; //获得当前行数据
+
+            var layEvent = obj.event; //获得 lay-event 对应的值（也可以是表头的 event 参数对应的值）
+            var shoppingId=data.id;
+            if(layEvent === 'Shipping'){ //编辑
+                tiaozhuan(shoppingId);
+            }
+        });
+
 
 
         //=======================事件监听方法区域 end===================================
@@ -732,6 +742,9 @@
             }
         }
         return theRequest;
+    }
+    function tiaozhuan(shoppingId) {
+        window.location.href = "Shipping.html?id="+shoppingId;//参数名称为index
     }
     //======================== 普通方法 区域 end======================================
 
