--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -692,7 +692,7 @@
                 ,{field: 'goodsNumber', title: '吨数'}
                 ,{field: 'goodsUnitPrice', title: '料款/吨'}
                 ,{field: 'goodsFreight', title: '运费/吨'}
-                ,{field: 'goodsTime', title: '时间'}
+                ,{field: 'goodsTime', title: '购进时间'}
                 , { field: '', title: '成本总价',  templet: function (item) {
                       return   (item.goodsUnitPrice +item.goodsFreight) * item.goodsFreight
                     }
